Fix wrong call.

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "NLSwyNFwHXUQ"
       },
@@ -140,7 +140,7 @@
         },
         "outputId": "441b23cd-33df-459e-85b4-acf9bc580ab3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
           "height": 406
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -214,7 +214,7 @@
           "height": 424
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -267,7 +267,7 @@
           "height": 70
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -413,7 +413,7 @@
         "id": "VT2WVlGzjwxH",
         "outputId": "84c9f6c6-d376-4390-b877-6a8155636534"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +450,7 @@
         },
         "outputId": "d4491c02-8f77-43ef-b6aa-a74d7d5cde20"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
           "height": 53
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +537,7 @@
           "height": 70
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
           "height": 36
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,7 +752,7 @@
           "height": 123
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -830,7 +830,7 @@
         "\n",
         "\n",
         "\n",
-        "list_inclinations = load_inclinations(segments_list)\n",
+        "tr_list_inclinations = load_inclinations(tr_segments_list)\n",
         "ts_list_inclinations = load_inclinations(ts_segments_list)\n",
         "\n",
         "'''\n"
@@ -843,7 +843,7 @@
           "height": 123
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -888,7 +888,7 @@
       "metadata": {
         "id": "PUprC2sZksY1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -991,7 +991,7 @@
       "metadata": {
         "id": "KNvh-lr3onFu"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1072,7 +1072,7 @@
         },
         "outputId": "9c9398f4-cf05-4840-eb39-e9aaec75809a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1112,7 +1112,7 @@
         "id": "ztkp0RIqV6Gj",
         "outputId": "cac4db96-5784-4a36-85ab-972ffa1438cd"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1133,7 @@
       "metadata": {
         "id": "E3ijqGt6VxwA"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1320,13 +1320,6 @@
         "  list_optimizers.append(optim.Adam(list_NNs[i].parameters(), lr=0.001))\n",
         "\n",
         "for i in range(len(v_num_features)):\n",
-        "  \"\"\"features = features_train[i]\n",
-        "  trainset = CustomDataset(features, trainset.labels)\n",
-        "  trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=True)\n",
-        "  test_features = features_test[i]\n",
-        "  testset = CustomDataset(test_features, testset.labels)\n",
-        "  testloader = torch.utils.data.DataLoader(testset, batch_size=64, shuffle=False)\"\"\"\n",
-        "\n",
         "  new_trainset = CustomDataset(features_train[i], trainset.labels)\n",
         "  new_trainloader = torch.utils.data.DataLoader(new_trainset, batch_size=64, shuffle=True)\n",
         "\n",
